--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>groupId</groupId>
     <artifactId>ciscn</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
