--- a/pom.xml
+++ b/pom.xml
@@ -80,31 +80,36 @@
             <version>4.13</version>
             <scope>test</scope>
         </dependency>
-        <!--&lt;!&ndash; 添加slf4j日志api &ndash;&gt;-->
-        <!--<dependency>-->
-        <!--    <groupId>org.slf4j</groupId>-->
-        <!--    <artifactId>slf4j-api</artifactId>-->
-        <!--    <version>1.7.20</version>-->
-        <!--</dependency>-->
-        <!--&lt;!&ndash; 添加logback-classic依赖 &ndash;&gt;-->
-        <!--<dependency>-->
-        <!--    <groupId>ch.qos.logback</groupId>-->
-        <!--    <artifactId>logback-classic</artifactId>-->
-        <!--    <version>1.2.3</version>-->
-        <!--</dependency>-->
-        <!--&lt;!&ndash; 添加logback-core依赖 &ndash;&gt;-->
-        <!--<dependency>-->
-        <!--    <groupId>ch.qos.logback</groupId>-->
-        <!--    <artifactId>logback-core</artifactId>-->
-        <!--    <version>1.2.3</version>-->
-        <!--</dependency>-->
+        <!-- 添加slf4j日志api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.20</version>
+        </dependency>
+        <!-- 添加logback-classic依赖 -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+        <!-- 添加logback-core依赖 -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.2.3</version>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
+                <configuration>
+                    <port>80</port>
+                    <path>/</path>
+                </configuration>
             </plugin>
         </plugins>
     </build>
